Issue 334997. fix Progress Indicator polling issue by upgrading Vaadin version.
upgrade Vaadin from 7.0.6 to 7.3.2.
addons.scss file was added by generageWidgetSet command.
also, I see the latest Vaadin build adds "ie10" value to Vaadin1Widgetset.gwt.xml file.

added VaadinTestHelper required for Vaadin unit tests.
this new class is in the new "test-utilities-ui" module.

set the poll interval for ProgressBars on "current" UI because
getUI() returns NULL for components not attached to
some other root component.

hide "maximize" button which became visible
in popups' headers with the new Vaadin 7.3.2

Vaadin Upgrade: replaced property.toString() with property.getValue()
plus String casting later...