@@ -1,15 +1,11 @@
 apply plugin: 'war'
+//apply from: 'http://plugins.jasoft.fi/vaadin.plugin'
+apply from: 'http://plugins.jasoft.fi/vaadin.plugin?version=0.9-SNAPSHOT'
 
 dependencies {
-//    compile "com.vaadin:vaadin-server:$vaadinVersion"
-//    compile "com.vaadin:vaadin-client-compiled:$vaadinVersion"
-//    compile "com.vaadin:vaadin-themes:$vaadinVersion"
     compile 'org.vaadin.addons:googleanalyticstracker:2.0.0'
 
     compile libraries.slf4j
-    providedCompile libraries.servletAPI
-    providedCompile "com.vaadin:vaadin-client:$vaadinVersion"
-
     compile project(":webshared")
 
     compile project(":connectors:connector-msp")
@@ -25,65 +21,13 @@ dependencies {
     testCompile project(":test-utilities")
 }
 
-ext {
-    webAppDirName = "src/main/webapp"
-    gwtBuildDirInWebRoot = 'VAADIN/widgetsets'
-    vaadinDir = webAppDirName + '/' + gwtBuildDirInWebRoot
-    widgetsetClass = 'com.taskadapter.webui.widgetset.Vaadin1Widgetset'
-}
-
-// See https://github.com/johndevs/gradle-vaadin-plugin#readme
-// the latest plugin version (0.7 at this moment) fails on javadoc target.
-// I reported this here: https://github.com/johndevs/gradle-vaadin-plugin/issues/91
-// and switched from "latest" (the next line) to v. 0.6.5
-// apply from: 'http://plugins.jasoft.fi/vaadin.plugin'
-apply from: 'http://plugins.jasoft.fi/vaadin.plugin?version=0.9'
-
 vaadin {
-    version = vaadinVersion
+    version = "$vaadinVersion"
     widgetset = 'com.taskadapter.webui.widgetset.Vaadin1Widgetset'
-    gwt.jvmArgs = ['-Xmx800m']
 }
 
 war {
-    // Exclude unneccessery GWT Compiler artifacts
+    // Exclude unnecessary GWT Compiler artifacts
     exclude "**/gwt-unitCache/**"
 }
 
-/*
-//dependencies{
-//    compile group:'com.google.gwt',     name:'gwt-user',    version:'2.4.0'
-//    compile group:'com.google.gwt',     name:'gwt-dev',     version:'2.4.0'
-//}
-
-task widgetset << {
-    // Create widgetset directory (if needed)
-    def created = (new File(gwtBuildDir)).mkdirs()
-
-    // Compile
-    ant.java(classname: 'com.google.gwt.dev.Compiler', failOnError: 'yes',  maxmemory: '1000m') //fork: 'true'
-            {
-                classpath {
-                    pathElement(path: configurations.compile.asPath)
-                    pathElement(path: sourceSets.main.runtimeClasspath.asPath)
-                    sourceSets.main.java.srcDirs.each {
-                        pathelement(location: it.absolutePath)
-                    }
-                }
-
-                arg(line: '-war ' + gwtBuildDir)
-                arg(line: '-logLevel INFO')
-                arg(line: '-style OBF')
-                arg(line: '-localWorkers 2')
-                arg(line: widgetsetClass)
-
-//                jvmarg(value: '-Djava.awt.headless=true')
-//                jvmarg(value: '-XX:MaxPermSize=256M')
-//                jvmarg(value: '-Xmx500M')
-            }
-}
-
-
-// Require widgetset compilation before WAR is built
-//war.dependsOn widgetset
-*/
